--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
   <meta http-equiv="Content-Type" content="charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
 
-  <title>Agora Web Sample</title>
+  <title>Asteria</title>
 
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="materialize.css" rel="stylesheet" media="screen,projection"/>
